2002-12-23  Nick Clifton  <nickc@redhat.com>

	* nlmconv.c (main): Pass TRUE as third argument to
	bfd_arch_get_compatible.

2002-12-23  Nick Clifton  <nickc@redhat.com>

	* strings.c (isgraphic): Replace definition with STRING_ISGRAPHIC
	macro.  Handle 'S' encoding, accepting 8-bit characters.
	(main): Parse 'S' encoding.
	(get_char): Accept 'S' encoding.
	(print_strings): Use STRING_ISGRAPHIC.
	(usage): Document support of 'S' encoding.
	* doc/binutils.texi: Document support of 'S' encoding/
	* NEWS: Mention new feature.

2002-12-20  Alan Modra  <amodra@bigpond.net.au>

	* README <building ar>: Don't use libibery's needed_list or
	required_list, instead link libiberty/*.o.

2002-12-19  Kazu Hirata  <kazu@cs.umass.edu>

	* doc/binutils.texi: Fix typos.

2002-12-14  John David Anglin  <dave@hiauly1.hia.nrc.ca>

	* doc/binutils.texi: Add missing parenthesis.

2002-12-15  Nick Kelsey  <nickk@ubicom.com>

	* objcopy.c: Add --prefix-symbols=<prefix> option to rename all
	symbols by adding the given prefix to the begining of the symbol
	name. This is useful to provide name space seperation regardless
	of how the object file was created. Added --prefix-sections=
	<prefix> and --prefix-alloc-sections=<prefix> options to rename all
	sections (or all sections with the alloc flag set) by adding the given
	prefix to the begining of the symbol name.
	* NEWS: Mention this new feature.
	* doc/binutils.texi: Document this new feature.

2002-12-13  Alan Modra  <amodra@bigpond.net.au>

	* dlltool.c (mcore_elf_gen_out_file): Replace all occurrences of
	dyn_string_append with dyn_string_append_cstr.

	* emul_aix.c (ar_emul_aix_create): Remove unused function.

2002-12-10  James Cownie <jcownie@etnus.com>

	* readelf.h (get_TAG_name, get_AT_name,
	read_and_display_attr_value): Add support for UPC extensions to
	DWARF2 spec.
	* NEWS: Mention this new support.

2002-12-08  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Mention that bfd no longer declares a "boolean" type.
